<package>
  <name>image_stream</name>
  <version>1.0.2</version>
  <description>rosweb plugin to serve images as streams (MJPEG, Theora, FLV, etc)</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/image_stream</url>

  <author>Rob Wheeler</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosweb</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv2</build_depend>

  <run_depend>rosweb</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>opencv2</run_depend>

<export>
    <rosweb plugin="image_stream.handler"/>
</export>

</package>
