<package>
  <name>launchman</name>
  <version>1.0.2</version>
  <description>Launch Manager</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/launchman</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Scott Noob Hassan</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>roslaunch</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->

</package>
