<package>
  <name>rosjson</name>
  <version>1.0.0</version>
  <description>rosjson is a Python library for converting ROS messages to JSON
     (JavaScript Object Notation) representation.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosjson</url>

  <author email="kwc@willowgarage.com">Ken Conley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>


</package>
