<?xml version="1.0"?>
<package>
  <name>web_interface</name>
  <version>1.0.2</version>
  <description>The web_interface package</description>

  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
  <license>BSD</license>
  <author email="dash@clearpathrobotics.com">Devon Ash</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>image_stream</run_depend>
  <run_depend>pyclearsilver</run_depend>
  <run_depend>ros_apache2</run_depend>
  <run_depend>launchman</run_depend>
  <run_depend>rosjson</run_depend>
  <run_depend>rosweb</run_depend>
  <run_depend>web_msgs</run_depend>
  <run_depend>webui</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
